# DRF_hw

./: .env_example  lessons.json  pyproject.toml
config/: settings.py  urls.py
lessons/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_alter_lesson_course.py  0004_payments.py  0005_alter_payments_options.py  0006_course_owner_lesson_owner.py  0007_alter_lesson_video_link.py  0008_subscription.py  0009_payments_link_payments_session_id.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
